Fix footer background image z-index

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,4 @@ body {
 }
 
 /* Additional global styles will be injected here during export */
+   z-index: 1;
